@@ -131,6 +131,7 @@
 			<label index="label_telephone">Phone number</label>
 			<label index="label_email">E-mail address</label>
 			<label index="label_terms">I accept the terms and conditions.</label>
+			<label index="label_terms_2">I accept the terms for travelling.</label>
 			<label index="label_submit_registration">Finish registration</label>
 			<label index="label_proceed_registration">Proceed to checkout</label>
 			<label index="label_back_registration">Back</label>
@@ -156,6 +157,7 @@
 			<label index="message_chooseMethodOfPayment">Please select a method of payment.</label>
 			<label index="message_provideBankData">Please provide your bank data.</label>
 			<label index="message_acceptTerms">Please accept the terms and conditions in order to register for this event.</label>
+			<label index="message_acceptTerms2">Please accept the terms for travelling in order to register for this event.</label>
 		</languageKey>
 		<languageKey index="dk" type="array">
 			<label index="seminars.pi_flexform.sheet_general">Generalt</label>
@@ -357,6 +359,7 @@
 			<label index="label_telephone">Telefon</label>
 			<label index="label_email">E-mail-Adresse</label>
 			<label index="label_terms">Ich akzeptiere die allgemeinen Geschäftsbedingungen.</label>
+			<label index="label_terms_2">Ich akzeptiere die Reisebedingungen.</label>
 			<label index="label_submit_registration">Verbindlich anmelden</label>
 			<label index="label_proceed_registration">Weiter</label>
 			<label index="label_back_registration">Zurück</label>
@@ -382,6 +385,7 @@
 			<label index="message_chooseMethodOfPayment">Bitte wählen Sie eine Zahlungsart aus.</label>
 			<label index="message_provideBankData">Bitte geben Sie Ihre Bankverbindung an.</label>
 			<label index="message_acceptTerms">Bitte akzeptieren Sie die allgemeinen Geschäftsbedingungen, um sich für diese Veranstaltung anzumelden.</label>
+			<label index="message_acceptTerms2">Bitte akzeptieren Sie die Reisebedingungen, um sich für diese Veranstaltung anzumelden.</label>
 		</languageKey>
 		<languageKey index="no" type="array">
 		</languageKey>
@@ -716,6 +720,7 @@
 			<label index="label_telephone" type="integer">33039901</label>
 			<label index="label_email" type="integer">146136420</label>
 			<label index="label_terms" type="integer">112775823</label>
+			<label index="label_terms_2" type="integer">6400727</label>
 			<label index="label_submit_registration" type="integer">88697193</label>
 			<label index="label_proceed_registration" type="integer">132169581</label>
 			<label index="label_back_registration" type="integer">5603241</label>
@@ -742,6 +747,7 @@
 			<label index="message_chooseMethodOfPayment" type="integer">209557761</label>
 			<label index="message_provideBankData" type="integer">10940357</label>
 			<label index="message_acceptTerms" type="integer">198918363</label>
+			<label index="message_acceptTerms2" type="integer">220063200</label>
 		</languageKey>
 		<languageKey index="no" type="array">
 		</languageKey>
@@ -1000,6 +1006,7 @@
 			<label index="label_telephone">Phone number</label>
 			<label index="label_email">E-mail address</label>
 			<label index="label_terms">I accept the terms and conditions.</label>
+			<label index="label_terms_2">I accept the terms for travelling.</label>
 			<label index="label_submit_registration">Finish registration</label>
 			<label index="label_proceed_registration">Proceed to checkout</label>
 			<label index="label_back_registration">Back</label>
@@ -1025,6 +1032,7 @@
 			<label index="message_chooseMethodOfPayment">Please select a method of payment.</label>
 			<label index="message_provideBankData">Please provide your bank data.</label>
 			<label index="message_acceptTerms">Please accept the terms and conditions in order to register for this event.</label>
+			<label index="message_acceptTerms2">Please accept the terms for travelling in order to register for this event.</label>
 		</languageKey>
 		<languageKey index="dk" type="array">
 			<label index="seminars.pi_flexform.sheet_general">General</label>
