@@ -408,6 +408,29 @@
 				</validator:STANDARD>
 			</validators>
 		</renderlet:CHECKSINGLE>
+
+		<renderlet:CHECKSINGLE name="terms_2">
+			<label>LLL:EXT:seminars/pi1/locallang.php:label_terms_2</label>
+			<process>
+				<userobj>
+					<extension>this</extension>
+					<method>hasRegistrationFormField</method>
+					<params>
+						<data name="elementname" value="terms_2" />
+					</params>
+				</userobj>
+			</process>
+			<validators>
+				<validator:STANDARD>
+					<userobj>
+						<extension>this</extension>
+						<method>isTerms2CheckedAndEnabled</method>
+						<message>LLL:EXT:seminars/pi1/locallang.php:message_acceptTerms2</message>
+					</userobj>
+				</validator:STANDARD>
+			</validators>
+		</renderlet:CHECKSINGLE>
+
 		<renderlet:SUBMIT name="btncont">
 			<refresh />
 			<label>LLL:EXT:seminars/pi1/locallang.php:label_back_registration</label>
