@@ -1,4 +1,5 @@
 0.5.0
+- Change: Add a second "terms" checkbox to the registration form (#547)
 - Feature: Add record type for checkboxes in the registration form (#436)
 - Feature: New BE module: event list, registration list, speaker list and organizer list (#279, #509, #543)
 - Fix: Ordering of seminars doesn't work with MySQL Version 4.1.21 (#500)
